--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@ text {
 }
 
 </style>
+<p style="margin-bottom: 30px;"><b>Note:</b> very provisional; just experimenting at this stage.</p>
 <svg width="960" height="600"></svg>
 <script src="https://d3js.org/d3.v4.min.js"></script>
 <script>
